deploy/kubenetes/deprecated/alluxio/client.yml
apiVersion: v1
kind: Pod
metadata:
  name: alluxio-client-readonly-bowen
spec:
  imagePullSecrets:
    - name: atlab-images
  containers:
    - name: alluxio-client-readonly-bowen
      image: reg-xs.qiniu.io/atlab/alluxio
      imagePullPolicy: Always
      command: ["/entrypoint.sh"]
      args: ["client"]
      resources:
        requests:
          cpu: 2
          memory: 20Gi 
        limits:
          cpu: 2
          memory: 40Gi 
      securityContext:
        privileged: true
  restartPolicy: Always
