deploy/kubenetes/deprecated/alluxio/worker.yml
apiVersion: v1
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: alluxio-worker-readonly
  namespace: ava
spec:
  rules:
  - host: "alluxio-worker-readonly.ava.ke-xs.cloudappl.com"
    http:
      paths:
      - backend:
          serviceName: alluxio-worker-readonly
          servicePort: 30000
        path: /
---
apiVersion: v1
kind: Service
metadata:
  name: alluxio-worker-readonly
  labels:
    app: alluxio-worker-readonly
spec:
  clusterIP: None
  ports:
  - port: 30000
    name: web
---
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  name: alluxio-worker-readonly
spec:
  template:
    metadata:
      labels:
        app: alluxio-worker-readonly
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - xs709
                - xs710
                - xs1306
      imagePullSecrets:
        - name: atlab-images
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
        - name: alluxio-worker-readonly
          image: reg-xs.qiniu.io/atlab/alluxio-bowen
          imagePullPolicy: Always
          command: ["/entrypoint.sh"]
          args: ["worker"]
          ports:
          - containerPort: 29998
            hostPort: 29998
            name: rpc
          - containerPort: 29999
            hostPort: 29999
            name: data
          - containerPort: 30000
            hostPort: 30000
            name: web
          volumeMounts:
            - name: alluxio-ramdisk
              mountPath: /opt/ramdisk
            - name: alluxio-data
              mountPath: /underStorage
            - name: alluxio-cache
              mountPath: /opt/cachedisk
          resources:
            requests:
              cpu: 2
              memory: 21Gi 
            limits:
              cpu: 16
              memory: 40Gi 
      restartPolicy: Always
      volumes:
        - name: alluxio-ramdisk
          emptyDir:
            medium: "Memory"
        - name: alluxio-data
          emptyDir: {}
        - name: alluxio-cache
          emptyDir: {}
